# the-fireplace

./: .claude-launch.sh  .claude-prompt.txt  .gitignore  .mcp.json  DEVICE_TOKEN_PERSISTENCE.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  QUICKSTART.md  README.md  SCAFFOLD.md  TESTING_CHECKLIST.md  TOKEN_MANAGEMENT_EXAMPLE.tsx  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md  settings.json
.claude/agents/: chat.md  dashboards.md  gateway.md  operations.md  polish.md  ui-shell.md
.claude/hooks/: format-code.sh
docs/: BRANDING.md  ICONS.md  OPENCLAW_MISSION_CONTROL_IMPROVEMENTS.md
docs/protocol/: index.d.ts
scripts/: doctor.sh  generate-icons.py  launch-demons.sh  launch-overhaul.sh  parallel.sh  regenerate-icons.sh  setup-mac-mini.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: keychain.rs  lib.rs  main.rs  notifications.rs  tray.rs
src/components/: ApprovalNotifier.tsx  CommandPalette.tsx  ConnectionStatus.tsx  GlobalShortcuts.tsx  MarkdownRenderer.tsx  MobileNav.tsx  SessionReplay.tsx  Sidebar.tsx  StateIndicators.tsx  UpdateBanner.tsx
src/gateway/: client.ts  index.ts  protocol.ts  types.ts
src/hooks/: useAutoUpdate.ts  useGlobalShortcut.ts  useKeyboard.ts  useNotificationActions.ts  useNotifications.ts  usePlatform.ts  useTraySync.ts
src/lib/: conflictDetection.ts  demonTemplates.ts  keychain.ts  modelTiers.ts  optimistic.ts  planExtraction.ts  utils.ts
src/stores/: agents.ts  approvals.ts  channels.ts  chat.ts  config.ts  connection.ts  cron.ts  demonChat.ts  demonHealth.ts  demonMemory.ts  demonObservability.ts  demonTasks.ts  devices.ts  logs.ts  models.ts  palette.ts  planCache.ts  (+3 more)
(+68 files in other folders)
