[package]
name = "the-fireplace"
version = "0.1.0"
description = "Mission Control for OpenClaw"
authors = ["Patrick"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "the_fireplace_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2.10.0"
tauri-plugin-store = "2.4.2"
thiserror = "2.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
security-framework = "3.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
